# private-ai-infra

./: .env.example  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-mlx.txt  requirements.txt
.github/workflows/: ci.yml
agents/hermes/: __init__.py  orchestrate.py  session.py  verify.py
agents/interop/: __init__.py  peer.py
agents/openclaw/: OPENCLAW_ASSURANCE_CONTRACT.md  README.md  __init__.py  checks.py  evidence.py  run.py  sink.py  sink_sqlite.py  sqlite_util.py  worker.py
agents/opencode_sandbox/: evidence_emit.py  worker.py
config/: conformance_policy.toml  policy.example.toml
docs/: canonical-plan-hashing.md  cve-scan-benchmark.md  delegation-and-defense.md  delegation-spec.md  demo.md  evidence-sink-design.md  orchestration.md  positioning.md  product-evolution.md  roadmap.md  run-id-approval-design.md  security-model.md  threat-model-authority-loop.md
evals/: cases.py  run.py
site/: app.js  author.css  author.html  index.html  styles.css
src/private_ai_gateway/: __init__.py  a2a.py  app.py  approvals.py  approvals_sqlite.py  audit.py  backends.py  canonical.py  cli.py  contextopt.py  delegation.py  demo.py  demo_policy.toml  demo_sbom.json  ingress.py  logutil.py  orchestration.py  policy.py  siem.py  sqlite_util.py  state.py  tools.py  vulnintel.py
tests/conformance/: test_delegation_spec.py
tests/unit/: test_approval_binding.py  test_auth.py  test_backends.py  test_canonical.py  test_cli.py  test_console_decisions.py  test_contextopt.py  test_delegation.py  test_demo.py  test_durable_authority.py  test_durable_evidence.py  test_durable_evidence_concurrency.py  test_durable_ownership.py  test_durable_startup_integrity.py  test_evals.py  test_evidence_linkage.py  test_gateway_approval_decided_evidence.py  test_gateway_authorization_evidence.py  test_governance_endpoints.py  test_helpers.py  test_hermes_verify.py  (+15 more)
(+4 files in other folders)
