[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "private-ai-gateway"
version = "0.17.0"
description = "AI governance gateway: policy-as-code identity, enforced autonomy ceilings, A2A/MCP governance, guardrails, and a decision audit in front of any OpenAI-compatible model plane (or local MLX)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Debshikhar Das" }]
keywords = ["llm", "openai-compatible", "gateway", "ai-security", "governance", "agent-authorization", "mlx", "devsecops"]
dependencies = [
    "flask==3.1.3",
]

[project.optional-dependencies]
# In-process Apple Silicon inference. The gateway itself is model-plane-agnostic:
# without this extra it fronts any OpenAI-compatible upstream (or the demo backend).
mlx = ["mlx==0.31.2", "mlx-lm==0.31.3"]
dev = ["ruff>=0.6", "pytest>=8.0", "pytest-cov>=5.0", "bandit>=1.7", "pip-audit>=2.7"]

[project.scripts]
private-ai-gateway = "private_ai_gateway.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/private_ai_gateway"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["src", "agents", "."]

[tool.coverage.run]
source = ["private_ai_gateway", "hermes", "openclaw", "opencode_sandbox", "interop", "evals"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[tool.bandit]
# "review_target" holds deliberately-vulnerable fixture code — it exists so the OpenCode
# reviewer/act-step has real bugs to find; it is not product code, so it is not scanned.
exclude_dirs = ["tests", "agents/opencode_sandbox/examples/review_target"]
